--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "socket-chat-example",
+    "name": "basic-socket-implementation",
     "version": "0.0.1",
-    "description": "my first socket.io app",
+    "description": "my first socket.io implementation",
     "type": "module",
     "dependencies": {
         "express": "^4.18.2",
