--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "description": "my first socket.io implementation",
     "type": "module",
+    "scripts": {
+        "start:dev": "nodemon index.js"
+    },
     "dependencies": {
         "express": "^4.18.2",
         "socket.io": "^4.7.2"
